--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,3 +4,16 @@ body {
   font-family: sans-serif;
   background-color: rgba(240, 240, 240, 1);
 }
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
