--- a/client/src/components/layout/header/Header.css
+++ b/client/src/components/layout/header/Header.css
@@ -1,19 +1,29 @@
-.App-header {
+.header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  height: 6rem;
   background: rgb(122,188,255); /* Old browsers */
   background: -moz-linear-gradient(45deg, rgba(122,188,255,1) 0%, rgba(96,171,248,1) 44%, rgba(64,150,238,1) 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(45deg, rgba(122,188,255,1) 0%,rgba(96,171,248,1) 44%,rgba(64,150,238,1) 100%); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(45deg, rgba(122,188,255,1) 0%,rgba(96,171,248,1) 44%,rgba(64,150,238,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7abcff', endColorstr='#4096ee',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  padding-left: 1rem;
 }
 
 .header-menu {
-  margin-right: 1rem;
+  cursor: pointer;
+  margin-right: 1.5rem;
 }
 
 .sign_in {
   color: #fff;
   padding-right: 10px;
+}
+
+.logo {
+  color: #fff;
+  font-size: 2.5rem;
+  margin-left: 1rem;
+  text-decoration: none;
 }
