--- a/client/src/components/surveys/Survey.css
+++ b/client/src/components/surveys/Survey.css
@@ -7,3 +7,65 @@
   -moz-box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.75);
   box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.75);
 }
+
+
+/****************************************************
+SURVEY LIST
+****************************************************/
+.survey-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 1.5rem;
+}
+
+/****************************************************
+SURVEY ITEM
+****************************************************/
+.survey-item {
+  background-color: #fff;
+  cursor: pointer;
+  min-width: 30rem;
+  max-width: 128rem;
+  width: 100%;
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.25);
+}
+
+.survey-item:not(:last-child){
+  margin-bottom: 1.5rem;
+}
+
+.survey-item:first-child {
+  margin-top: 1.5rem;
+}
+
+.survey-content {
+  padding: 2rem 2.5rem;
+}
+
+.survey-title {
+  font-size: 3.3rem;
+  font-weight: 100;
+  margin-bottom: 1rem;
+}
+
+.survey-body,
+.survey-date,
+.survey-cta {
+  font-size: 1.5rem;
+}
+
+.survey-date {
+  text-align: right;
+  padding: .5rem;
+}
+
+.survey-divider {
+  border-bottom: 1px solid #eee;
+}
+
+.survey-cta {
+  padding: 0 2.5rem;
+  padding-bottom: 2rem;
+}
