--- a/client/src/components/surveys/Survey.css
+++ b/client/src/components/surveys/Survey.css
@@ -1,11 +1,75 @@
-.survey_form {
-  margin-top: 50px;
-  padding: 1em;
-  padding-bottom: 50px;
+/****************************************************
+SURVEY FORM
+****************************************************/
+.survery-form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin-top: 2rem;
+}
+
+.survey-form {
+  padding: 2rem 4rem;
   background-color: white;
-  -webkit-box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.75);
-  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.75);
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.25);
+}
+
+.survey-form-item {
+  margin-bottom: 1rem;
+}
+
+.survey-form-label {
+  font-size: 1.5rem;
+}
+
+.survey-form-input {
+  border: none;
+  border-radius: 3px;
+  background-color: #eee;
+  font-size: 2rem;
+  width: 30rem;
+  padding: 1rem;
+}
+
+@media (max-width:37.5em) {
+  .survey-form-input {
+    width: 25rem;
+  }
+
+  .survey-form {
+    padding: 1rem 2rem;
+  }
+
+}
+
+.survey-form-error {
+  font-size: 1.3rem;
+  color:rgb(245, 61, 50);
+  margin-top: .5rem;
+}
+
+.survey-form-btns {
+  display: flex;
+  justify-content: space-between;
+}
+
+.survey-form-btn-review,
+.survey-form-btn-cancel  {
+  font-size: 1.3rem;
+  border-radius: 3px;
+  padding: 1rem 2rem;
+  border: none;
+}
+
+.survey-form-btn-review {
+  background-color: var(--color-primary);
+}
+
+.survey-form-btn-cancel {
+  background-color: rgba(245, 61, 50, .8);
+  text-decoration: none;
+  color: #000;
 }
 
 
@@ -18,6 +82,7 @@ SURVEY LIST
   justify-content: center;
   align-items: center;
   margin: 0 1.5rem;
+
 }
 
 /****************************************************
@@ -25,11 +90,25 @@ SURVEY ITEM
 ****************************************************/
 .survey-item {
   background-color: #fff;
+  border-radius: 3px;
   cursor: pointer;
   min-width: 30rem;
   max-width: 128rem;
   width: 100%;
   box-shadow: 0 .5rem 1rem rgba(0,0,0,.25);
+  color: #000;
+  transition: all .4s;
+  backface-visibility: visible;
+}
+
+.survey-item:hover {
+  transform: translateY(-.3rem);
+}
+
+.survey-item:link,
+.survey-item:visited {
+  text-decoration: none;
+  color: #000;
 }
 
 .survey-item:not(:last-child){
@@ -45,9 +124,10 @@ SURVEY ITEM
 }
 
 .survey-title {
+
   font-size: 3.3rem;
   font-weight: 100;
-  margin-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 
 .survey-body,
@@ -68,4 +148,60 @@ SURVEY ITEM
 .survey-cta {
   padding: 0 2.5rem;
   padding-bottom: 2rem;
+}
+
+@media (max-width: 37.5em) {
+  .survey-title {
+    font-size: 2.5rem;
+  }
+}
+
+/****************************************************
+SURVEY REVIEW
+****************************************************/
+.survey-review-form-container {
+  padding: 2rem;
+  background-color: #fff;
+}
+
+.survey-review-header {
+  font-size: 3rem;
+  margin-bottom: 2rem;
+}
+
+.survey-review-item {
+  margin-bottom: 2rem;
+}
+
+.survey-review-label {
+  font-size: 1.3rem;
+}
+
+.survey-review-name {
+  font-size: 2rem;
+}
+
+.survey-review-btns {
+  display: flex;
+  justify-content: space-between;
+}
+
+.survey-review-send,
+.survey-review-back {
+  cursor: pointer;
+  border-radius: 3px;
+  border: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1rem 2rem;
+  font-size: 1.3rem;
+}
+
+.survey-review-back {
+  background-color: var(--color-primary);
+}
+
+.survey-review-send {
+  background-color: rgb(58, 251, 164);
 }
