--- a/client/src/components/pages/landing/Landing.css
+++ b/client/src/components/pages/landing/Landing.css
@@ -34,11 +34,16 @@ MEDIA QUERIES
 @media only screen and (max-width: 37.5em) {
   .Landing-heading {
     text-align: center;
-    font-size: 2rem;
+    font-size: 3rem;
+  }
+
+  .Landing-heading-sub {
+    padding: 0;
+    width: 20rem;
   }
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 64em) {
   .Landing-container {
     flex-direction: row;
   }
