added redirect if no user, forum page, posts feature model and fixed model styles

--- a/client/src/components/payments/Payments.css
+++ b/client/src/components/payments/Payments.css
@@ -12,6 +12,9 @@ Stripe Payments
   border-radius: 3px;
 }
 
+/******************************
+PAYMENTS PROMPT
+*******************************/
 .prompt-header {
   font-size: 2rem;
 }
