--- a/client/src/components/ui/modal/Modal.css
+++ b/client/src/components/ui/modal/Modal.css
@@ -6,30 +6,31 @@
     position: fixed;
     z-index: 500;
     background-color: white;
-    width: 70%;
+    width: 80%;
     border-radius: 3px;
     padding: 1.6rem;
     padding-bottom: 0;
-    left: 15%;
-    top: 10%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     box-sizing: border-box;
     transition: all 0.3s ease-out;
 }
 
 
 .modal-show {
-  transform: translateY(0);
+
   opacity: 1
 }
 
 .modal-hide {
-  transform: translateY(-100vh);
+
   opacity: 0
 }
 
 @media (min-width: 60em) {
     .modal {
         width: 50rem;
-        left: calc(50% - 25rem);
+
     }
 }
