--- a/client/src/react/components/App.css
+++ b/client/src/react/components/App.css
@@ -9,3 +9,15 @@
     opacity: 1;
   }
 }
+
+@keyframes moveInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(10rem);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
