--- a/client/src/react/components/posts/Posts.css
+++ b/client/src/react/components/posts/Posts.css
@@ -120,17 +120,14 @@ POST EDIT
 }
 
 .post-edit-box {
-  background-color: white;
   border-radius: 3px;
   padding: 1rem;
-  margin: .5rem;
-  font-size: 1.5rem;
-  width: 50vw;
   min-height: 50vh;
+  font-size: 1.5rem;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  box-shadow: 0 1rem 2rem rgba(0,0,0, .15);
 }
 
 .post-edit-btns {
@@ -148,7 +145,7 @@ POST EDIT
 }
 
 .post-edit-btn-update {
-  background-color: #eee;
+  background-color: rgb(242, 151, 57);
 }
 
 .post-edit-btn-delete {
@@ -160,8 +157,12 @@ MEDIA QUIERIES
 ******************************/
 @media (max-width: 37.5em) {
   .post-edit-box {
-    width: 90vw;
-    height: 70vh;
+    min-height: 70vh;
+  }
+
+  .post-edit-btn {
+    font-size: 1rem;
+    min-width: 5rem;
   }
 
 }
