--- a/client/src/react/components/posts/Posts.css
+++ b/client/src/react/components/posts/Posts.css
@@ -1,57 +1,3 @@
-/******************************
-POST FORM
-******************************/
-.post-form-container,
-.post-item-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: .5rem;
-  transition: all .2s;
-}
-
-.post-form {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  max-width: 50rem;
-  transition: all .2s;
-}
-
-.post-form-textarea {
-  min-height: 10rem;
-}
-
-
-.post-form-input,
-.post-form-textarea,
-.post-form-btn-submit {
-  border: none;
-  font-size: 2rem;
-  padding: 1rem 2rem;
-}
-
-.post-form-input {
-  border-bottom: 1px solid #eee;
-}
-
-.post-form-btn-submit {
-  outline: none;
-  border: none;
-  cursor: pointer;
-  background-color: transparent;
-  display: block;
-  /* align-self: center; */
-  background-color: var(--color-primary);
-}
-
-.post-form-err {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.3rem;
-  color: rgb(226, 73, 73);
-}
 
 /******************************
 POST LIST
@@ -78,7 +24,7 @@ POST ITEM
   flex-direction: column;
   border-radius: 3px;
   width: 50rem;
-  min-height: 10rem;
+  max-height: 10rem;
   padding: 1rem 2rem;
   background-color: white;
   box-shadow: 0 1rem 2rem rgba(0,0,0, .15);
@@ -124,6 +70,11 @@ POST ITEM
 /******************************
 POST EDIT
 ******************************/
+.post-edit-content {
+  max-height: 25rem;
+  overflow: scroll;
+}
+
 .post-edit-container{
   display: flex;
   justify-content: center;
@@ -164,6 +115,10 @@ POST EDIT
   background-color: rgb(251, 55, 55);
 }
 
+.post-edit-content {
+
+}
+
 /******************************
 MEDIA QUIERIES
 ******************************/
@@ -179,6 +134,10 @@ MEDIA QUIERIES
   .post-edit-btn {
     font-size: 1rem;
     min-width: 5rem;
+  }
+
+  .post-edit-content {
+    max-height: 25rem;
   }
 
 }
