--- a/client/src/react/components/layout/header/Header.css
+++ b/client/src/react/components/layout/header/Header.css
@@ -29,3 +29,17 @@
   margin-left: 1rem;
   text-decoration: none;
 }
+
+@media only screen and (max-width: 37.5em)  {
+  .logo {
+    font-size: 2rem;
+    margin-left: 0;
+    font-weight: bold;
+    letter-spacing: .1rem;
+  }
+
+  .sign_in {
+    font-size: 1.3rem;
+  }
+
+}
