--- a/client/src/react/components/pages/landing/Landing.css
+++ b/client/src/react/components/pages/landing/Landing.css
@@ -1,30 +1,41 @@
 
-.Landing-container {
+.landing-container {
   position: relative;
 }
 
-.Landing-img {
+.landing-img {
   filter: brightness(60%);
 }
 
-.Landing-text {
+.landing-text {
   color: #fff;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  width: 100%;
 }
 
-.Landing-heading {
+
+.landing-heading,
+.landing-heading-sub {
   text-align: center;
+  margin-bottom: 2rem;
+}
+
+.landing-heading {
   font-size: 4rem;
+  font-weight: 200;
 }
 
-.Landing-heading-sub {
+.landing-heading-sub {
+  font-weight: 100;
+  font-size: 2rem;
   padding: 0 1.5rem;
+  margin-bottom: 3rem;
 }
 
-.Landing-img {
+.landing-img {
   width: 100%;
 }
 
@@ -32,23 +43,22 @@
 MEDIA QUERIES
 *******************************/
 @media only screen and (max-width: 37.5em) {
-  .Landing-heading {
-    text-align: center;
-    font-size: 3rem;
+  .landing-heading {
+    padding: 0 .5rem;
+    text-align: none;
+    font-size: 2.7rem;
   }
 
-  .Landing-heading-sub {
+  .landing-heading-sub {
     padding: 0;
-    width: 20rem;
-  }
-}
-
-@media only screen and (min-width: 64em) {
-  .Landing-container {
-    flex-direction: row;
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
   }
 
-  .Landing-text {
-    margin: 1em;
+  .landing-img {
+    width: 100%;
+    height: 60vh;
   }
+
+
 }
