--- a/client/src/react/components/pages/landing/Landing.css
+++ b/client/src/react/components/pages/landing/Landing.css
@@ -40,6 +40,67 @@
 }
 
 /******************************
+Landing Features
+*******************************/
+.landing-features {
+  background-color: #fff;
+  padding-top: 2rem;
+}
+
+.landing-features-heading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--color-primary);
+}
+
+.landing-features-list {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+
+}
+
+.landing-features-item {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  flex: 1;
+  padding: 1.5rem 3rem;
+}
+
+.landing-features-item-img {
+  width: 5rem;
+  height: 5rem;
+  margin-bottom: 2rem;
+}
+
+.landing-features-item-text {
+  color: var(--color-primary);
+  padding-left: 1.5rem;
+}
+
+.landing-features-item-heading {
+  text-align: center;
+  font-size: 1.8rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  margin-bottom: 1.5rem;
+}
+
+.landing-features-item-description {
+  text-align: center;
+}
+
+.landing-features-item-description {
+  font-size: 1.3rem;
+  color: #777;
+}
+
+
+/******************************
 MEDIA QUERIES
 *******************************/
 @media only screen and (max-width: 37.5em) {
@@ -58,6 +119,43 @@ MEDIA QUERIES
   .landing-img {
     width: 100%;
     height: 60vh;
+  }
+
+  .landing-features-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .landing-features-item {
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex: none;
+    display: flex;
+    padding: 1.5rem 3rem;
+    width: 100%;
+    max-width: 30rem;
+  }
+
+  .landing-features-item-img {
+    width: 3rem;
+    height: 3rem;
+    background-color: var(--color-primary);
+    border-radius: 5px;
+    padding: 1rem;
+    box-sizing: content-box;
+  }
+
+  .landing-features-item-heading {
+    font-size: 1.5rem;
+  }
+
+  .landing-features-item-heading,
+  .landing-features-item-description {
+    text-align: left;
+    margin-bottom: 0;
   }
 
 
